# PageIndex

./: .gitignore  CHANGELOG.md  Makefile  README.md  eval_repl.py  pageindex_core.py  pyproject.toml  run.py  run_pageindex.py
.agents/skills/pageindex-eval/: SKILL.md
.agents/skills/pageindex-eval/agents/: openai.yaml
.agents/skills/pageindex-eval/scripts/: vectorless_rag_eval.py
.agents/skills/pageindex-search/: SKILL.md
.agents/skills/pageindex-search/agents/: openai.yaml
.agents/skills/pageindex-search/scripts/: pageindex_search.py
.claude/skills/pageindex-eval/: SKILL.md
.claude/skills/pageindex-search/: SKILL.md
.github/workflows/: eval-matrix.yml
cookbook/: README.md
evals/: pageindex_vs_full_context.yaml
pageindex/: cli.py  page_index.py  utils.py
scripts/: __init__.py  eval_matrix.py
tests/: bench_template.json  test_eval_matrix.py  test_page_index.py  test_pageindex_core.py  test_pageindex_core_integration.py  test_utils.py
